--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.0",
     "axios": "^0.19.2",
-    "gh-pages": "^3.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
@@ -49,6 +48,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^2.0.1"
+    "prettier": "^2.0.1",
+    "gh-pages": "^3.0.0"
   }
 }
