--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.0",
     "axios": "^0.19.2",
+    "crypto-js": "^4.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
@@ -20,7 +21,6 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
@@ -51,7 +51,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "gh-pages": "^3.0.0",
     "prettier": "^2.0.1"
   }
 }
