--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio_front",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://localhost:9000",
+  "homepage": "https://vast-springs-43423.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
