--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_PATH_PRODUCTION="https://vast-springs-43423.herokuapp.com"
+REACT_APP_SERVER_PATH_PRODUCTION="https://sydnenaal-portfolio.herokuapp.com"
 REACT_APP_SERVER_PATH_DEVELOPMENT="http://localhost:9000"
