--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
     "crypto-js": "^4.0.0",
+    "iterable-objects": "^0.0.8",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
